Added authentication for favourites

--- a/lib/fizz_buzz_web/templates/home/index.html.eex
+++ b/lib/fizz_buzz_web/templates/home/index.html.eex
@@ -3,10 +3,6 @@
   <p>Putting the buzz in the fizz</p>
 </section>
 
-<%= for item <- @list do %>
-  <%= item.string %>
-<% end %>
-
 <%= form_for @conn, "/", [method: :get],  fn f -> %>
       <%= label f, :page_size %>
       <%= number_input f, :page_size, value: @calculator.page_size %>
@@ -14,3 +10,17 @@
       <%= number_input f, :page_number, value: @calculator.page_number %>
       <%= submit "Go!" %>
 <% end %>
+
+<table class="numbers">
+  <tr>
+    <th>Number</th>
+    <%= if signed_in?(@conn) do %>
+      <th>Favourite?</th>
+      <th>Action</th>
+    <% end %>
+  </tr>
+
+  <%= for item <- @list do %>
+    <%= render "_number.html", item: item, conn: @conn, favourites: @favourites %>
+  <% end %>
+</table>
