Setting API Signing in and registering

--- a/lib/fizz_buzz_web/templates/user/show.html.eex
+++ b/lib/fizz_buzz_web/templates/user/show.html.eex
@@ -8,8 +8,8 @@
   </li>
 
   <li>
-    <strong>Encrypted password:</strong>
-    <%= @user.encrypted_password %>
+    <strong>password:</strong>
+    <%= @user.password %>
   </li>
 
 </ul>
