--- a/lib/fizz_buzz_web/templates/user/form.html.eex
+++ b/lib/fizz_buzz_web/templates/user/form.html.eex
@@ -5,13 +5,22 @@
     </div>
   <% end %>
 
+
   <%= label f, :username %>
   <%= text_input f, :username %>
   <%= error_tag f, :username %>
 
-  <%= label f, :encrypted_password %>
-  <%= text_input f, :encrypted_password %>
-  <%= error_tag f, :encrypted_password %>
+  <%= unless f.data.id do %>
+
+    <%= label f, :password %>
+    <%= text_input f, :password, value: nil %>
+    <%= error_tag f, :password %>
+
+    <%= label f, :password_confirmation %>
+    <%= text_input f, :password_confirmation, value: nil %>
+    <%= error_tag f, :password_confirmation %>
+  
+  <% end %>
 
   <div>
     <%= submit "Save" %>
